@@ -396,7 +396,8 @@ src/resmom/test/requests/test_requests
 src/resmom/test/start_exec/test_start_exec
 src/resmom/test/tmsock_recov/test_tmsock_recov
 src/server/test/accounting/test_accounting
-src/server/test/array_func/test_array_func
+src/test/array_func/test_array_func
+src/test/array_func/.AR
 src/server/test/array_upgrade/test_array_upgrade
 src/server/test/attr_recov/test_attr_recov
 src/server/test/batch_request/test_batch_request
